# MultiVectorEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: baseline.txt  draw.out  draw_plot-1.py  draw_plot.py  explain.txt  result.txt  split-key.py
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/src/: Makefile  cmake_install.cmake
cmake/test/: Makefile  cmake_install.cmake
conf/: brute_force_config.json  brute_force_ip_config.json  ip.json  ip_standard_nra.json  ip_standard_nra1.json  ipbase.json  ipnra.json  test_ip_config1.json  test_ip_config2.json  test_ip_config3.json  test_ip_config4.json  test_ipnra_config1.json  test_ipnra_config2.json  test_json.json  test_l2_config.json  test_l2_config.json.bak  test_l2_gist.json
include/: BaseEngine.h  MultiVectorCollection.h  MultiVectorCollectionIP.h  MultiVectorCollectionIPNra.h  MultiVectorCollectionL2.h  MultiVectorEngine.h  MultiVectorEngineIP.h  MultiVectorEngineL2.h  Utils.h  base _engine.h  multi_vector_engine.h
results/l2/: baseline.txt
src/: CMakeLists.txt  MultiVectorCollectionIP.cpp  MultiVectorCollectionIPNra.cpp  MultiVectorCollectionL2.cpp  MultiVectorEngine.cpp  MultiVectorEngineIP.cpp  MultiVectorEngineL2.cpp  Utils.cpp  main.cpp  multi_vector_engine.cpp
test/: CMakeLists.txt  brute_force.cpp  ip_nra_performance.cpp  main.cpp  testIP.cpp  test_gist_l2.cpp  test_ip.cpp  test_ip_baseline.cpp  test_ip_nra.cpp  test_ipnra_baseline.cpp  test_l2.cpp  test_nra.cpp  test_nra2.cpp  test_nra3.cpp  utils.cpp  utils.h
